# BC

./: .env.example  .gitignore  PRD.md  README.md  app.py  pyproject.toml
pages/: balancetes.py  comparison.py  conglomerados.py  indicadores.py  individual.py
scripts/: refresh.py  refresh_4010.py  refresh_balancetes.py  seed.py
src/: bcb_balancetes.py  db.py  ifdata_client.py  ingest.py  log.py  models.py  peers.py  queries.py  settings.py
tests/: conftest.py  test_bcb_balancetes.py  test_ifdata_client.py  test_indicadores.py  test_ingest.py  test_models.py  test_queries.py
