[project]
name = "bc-dashboard"
version = "0.1.0"
description = "Brazilian Financial Institutions Prudential Dashboard"
requires-python = ">=3.11"
dependencies = [
    "dash>=2.14,<3",
    "plotly>=5.18,<6",
    "polars>=1.0,<2",
    "pyarrow>=15.0",
    "duckdb>=1.0,<2",
    "httpx>=0.27,<1",
    "pydantic>=2.5,<3",
    "pydantic-settings>=2.1,<3",
    "structlog>=24.1,<26",
    "tenacity>=8.2,<10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "ruff>=0.5,<1",
    "mypy>=1.10,<2",
]

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = [
    "duckdb.*",
    "polars.*",
    "structlog.*",
    "httpx.*",
    "tenacity.*",
    "pydantic.*",
    "pydantic_settings.*",
    "dash.*",
    "plotly.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
